Change YAML to read from filesystem
